--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/bootstrap.css" style="text/css">
+    <link rel="stylesheet" href="estilo/bootstrap.css" type="text/css">
     <title>Segundo TP "El copias"</title>
 </head>
 <body>
@@ -12,8 +12,7 @@
       <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="75"><use xlink:href="#bootstrap"/></svg>
-            <img src="img/dipped.webp" height="50px">
+            <img src="img/dipped.webp" height="50px" alt="Logo">
           </a>
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
@@ -37,13 +36,13 @@
       </div>
     </section>
     <section class="bgPropio2">
-      <div class="container text-center">
-        <div class="row">
+      <div class="container">
+        <div class="row text-center">
           <div class="col lineaCirculo">
-            <span><img src="img/clock.svg" width="35px" class="redoRedonda"></span>
-            <span><img src="img/pc.svg" width="35px" class="redoRedonda"></span>
-            <span><img src="img/setup.svg" width="35px" class="redoRedonda"></span>
-            <span><img src="img/caja.svg" width="35px" class="redoRedonda"></span>
+            <span><img src="img/clock.svg" width="35px" class="redoRedonda" alt="Reloj"></span>
+            <span><img src="img/pc.svg" width="35px" class="redoRedonda" alt="PC"></span>
+            <span><img src="img/setup.svg" width="35px" class="redoRedonda" alt="Setup"></span>
+            <span><img src="img/caja.svg" width="35px" class="redoRedonda" alt="Caja"></span>
           </div>
         </div>
         <div class="row">
@@ -85,17 +84,17 @@
           <p class="personalPort">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas corporis repudiandae alias accusantium reprehenderit quam, ab illo praesentium odit, a porro cumque iste quis consectetur quod sit inventore accusamus similique?</p>
         </div>
         <div class="col">
-          <img class="imgBorde" src="img/gotita.jpg" height="150rem" width="150rem">
+          <img class="imgBorde" src="img/gotita.jpg" height="150rem" width="150rem" alt="La Gotita">
           <p class="webDesigner">1st Web Designer</p>
           <p class="webDesign">Web Design</p>
         </div>
         <div class="col">
-          <img class="imgBorde" src="img/despegar.webp" height="150rem" width="150rem">
+          <img class="imgBorde" src="img/despegar.webp" height="150rem" width="150rem" alt="Despegar">
           <p class="webDesigner">1st Web Designer</p>
           <p class="webDesign">Web Design</p>
         </div>
         <div class="col">
-          <img class="imgBorde" src="img/mercadoLibre.jpg" height="150rem" width="150rem">
+          <img class="imgBorde" src="img/mercadoLibre.jpg" height="150rem" width="150rem" alt="Mercado Libre">
           <p class="webDesigner">1st Web Designer</p>
           <p class="webDesign">Web Design</p>
         </div>
@@ -104,11 +103,14 @@
     <hr class="hrConClase">
     <section class="container">
       <div class="row cajita">
-        <div class="col cajita2">
+        <div class="col">
           <h4>Testimonials</h4>
           <br>
-          <img class="col" src="img/negro.jpg" height="50rem" width="50rem">
-          <p class="cajita3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam cum eius excepturi vero nam velit, doloribus cumque recusandae quos error nemo sit ipsa autem assumenda optio pariatur possimus tempora commodi!</p>
+          <div class="cajita2">
+            <img class="col modCuadrado" src="img/testimonial.jpg" height="70rem" width="70rem" alt="Esteban Maravilla">
+            <p class="cajita3">Nunca había visto una copia tan fiel, responsiva, dinámica y todo eso. Lo digo desde mis años de experiencia en el desarrollo, miren "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam cum eius excepturi vero nam velit, doloribus cumque recusandae quos error nemo sit ipsa autem assumenda optio pariatur possimus tempora commodi!".
+               Esteban Maravilla</p>
+          </div>
         </div>
         <div class="col">
           <h4>Our Latest Blog Posts</h4>
@@ -122,11 +124,20 @@
         <div class="col">
           <h4>Latest Tweets</h4>
           <br>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis culpa magnam exercitationem modi error dolore eius voluptatibus molestias.</p>
+          <div class="cajita2">
+            <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
+            <a class="tuiter" href="https://twitter.com/adiospipino/status/1583125110944169984?t=WpIVZOLy1zUINbjBGe1kfg&s=19">Todos los recursos nacionales por y para el pueblo</a>
+          </div>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aspernatur magnam velit quasi eum accusamus ut possimus?</p>
+          <div class="cajita2">
+            <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
+            <a class="tuiter" href="https://twitter.com/_nattyherrera/status/1582866436258951168?t=edbctC8mPHutw9D8cP_2EA&s=19 ">Puedes cambiar tu carrera, tu vida, tus resultados💡</a>
+          </div>
           <hr>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique possimus adipisci repellat excepturi.</p>
+          <div class="cajita2">
+            <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
+            <a class="tuiter" href="https://twitter.com/QuotesforGoal/status/1582906413504163840?t=_DAA7ZvUg7SZLZMzEgutAg&s=19 ">Ni tus peores enemigos te pueden hacer tanto daño como tus propios pensamientos</a>
+          </div>
         </div>
       </div>
     </section>
