Eliminación de una clase innecesaria

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section>
     <hr class="hrConClase">
     <section class="container">
-      <div class="row cajita">
+      <div class="row">
         <div class="col">
           <h4>Testimonials</h4>
           <br>
