--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
           <br>
           <div class="cajita2">
             <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
-            <a class="tuiter" href="https://twitter.com/adiospipino/status/1583125110944169984?t=WpIVZOLy1zUINbjBGe1kfg&s=19">Todos los recursos nacionales por y para el pueblo</a>
+            <a class="tuiter" href="https://twitter.com/adiospipino/status/1583125110944169984?t=WpIVZOLy1zUINbjBGe1kfg&s=19" target="_blank">Todos los recursos nacionales por y para el pueblo</a>
           </div>
           <hr>
           <div class="cajita2">
             <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
-            <a class="tuiter" href="https://twitter.com/_nattyherrera/status/1582866436258951168?t=edbctC8mPHutw9D8cP_2EA&s=19 ">Puedes cambiar tu carrera, tu vida, tus resultados💡</a>
+            <a class="tuiter" href="https://twitter.com/_nattyherrera/status/1582866436258951168?t=edbctC8mPHutw9D8cP_2EA&s=19 " target="_blank">Puedes cambiar tu carrera, tu vida, tus resultados💡</a>
           </div>
           <hr>
           <div class="cajita2">
             <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
-            <a class="tuiter" href="https://twitter.com/QuotesforGoal/status/1582906413504163840?t=_DAA7ZvUg7SZLZMzEgutAg&s=19 ">Ni tus peores enemigos te pueden hacer tanto daño como tus propios pensamientos</a>
+            <a class="tuiter" href="https://twitter.com/QuotesforGoal/status/1582906413504163840?t=_DAA7ZvUg7SZLZMzEgutAg&s=19 " target="_blank">Ni tus peores enemigos te pueden hacer tanto daño como tus propios pensamientos</a>
           </div>
         </div>
       </div>
