Links de Portfolio, web Design, modificación en los 'Latest tweets'

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span><img src="img/caja.svg" width="35px" class="redoRedonda" alt="Caja"></span>
           </div>
         </div>
-        <div class="row">
+        <div class="row text-center">
           <div class="col">
             <br>
             <h4>Plan</h4>
@@ -82,19 +82,20 @@
         <div class="col">
           <h3>Portfolio</h3>
           <p class="personalPort">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas corporis repudiandae alias accusantium reprehenderit quam, ab illo praesentium odit, a porro cumque iste quis consectetur quod sit inventore accusamus similique?</p>
+          <p><a class="personalPort portPort" href="https://media.giphy.com/media/U1rlk8zdcAwbm/giphy.gif" target="_blank">Our Portfolio</a></p>
         </div>
         <div class="col">
-          <img class="imgBorde" src="img/gotita.jpg" height="150rem" width="150rem" alt="La Gotita">
+          <a href="https://poxipolstore.com.ar/nuestras-marcas/la-gotita/" target="_blank"><img class="imgBorde" src="img/gotita.jpg" height="150rem" width="150rem" alt="La Gotita"></a>
           <p class="webDesigner">1st Web Designer</p>
           <p class="webDesign">Web Design</p>
         </div>
         <div class="col">
-          <img class="imgBorde" src="img/despegar.webp" height="150rem" width="150rem" alt="Despegar">
+          <a href="https://www.despegar.com.ar/" target="_blank"><img class="imgBorde" src="img/despegar.webp" height="150rem" width="150rem" alt="Despegar"></a>
           <p class="webDesigner">1st Web Designer</p>
           <p class="webDesign">Web Design</p>
         </div>
         <div class="col">
-          <img class="imgBorde" src="img/mercadoLibre.jpg" height="150rem" width="150rem" alt="Mercado Libre">
+          <a href="https://www.mercadolibre.com.ar/" target="_blank"><img class="imgBorde" src="img/mercadoLibre.jpg" height="150rem" width="150rem" alt="Mercado Libre"></a>
           <p class="webDesigner">1st Web Designer</p>
           <p class="webDesign">Web Design</p>
         </div>
@@ -126,12 +127,18 @@
           <br>
           <div class="cajita2">
             <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
-            <a class="tuiter" href="https://twitter.com/adiospipino/status/1583125110944169984?t=WpIVZOLy1zUINbjBGe1kfg&s=19" target="_blank">Todos los recursos nacionales por y para el pueblo</a>
+            <a class="tuiter" href="https://twitter.com/adiospipino/status/1583125110944169984?t=WpIVZOLy1zUINbjBGe1kfg&s=19" target="_blank">─¿Cómo va la inflación?
+              ─No lo sabemos, todo el equipo es para monitorear Gran Hermano.</a>
           </div>
           <hr>
           <div class="cajita2">
             <img class="col modCuadrado" src="img/logoTW.webp" height="70rem" width="70rem" alt="Twitter Larry">
-            <a class="tuiter" href="https://twitter.com/_nattyherrera/status/1582866436258951168?t=edbctC8mPHutw9D8cP_2EA&s=19 " target="_blank">Puedes cambiar tu carrera, tu vida, tus resultados💡</a>
+            <a class="tuiter" href="https://twitter.com/_nattyherrera/status/1582866436258951168?t=edbctC8mPHutw9D8cP_2EA&s=19 " target="_blank">Si tienes comida sobre tu mesa 🥘 
+              Un techo sobre tu cabeza 🏠 
+              Puedes vestir y asear tu cuerpo 🧥 
+              Y tienes una conexión a internet medianamente buena 💻
+              
+              Puedes cambiar tu carrera, tu vida, tus resultados💡</a>
           </div>
           <hr>
           <div class="cajita2">
