Cambio en los íconos

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <div class="container">
         <div class="row text-center">
           <div class="col lineaCirculo">
-            <span><img src="img/clock.svg" width="35px" class="redoRedonda" alt="Reloj"></span>
-            <span><img src="img/pc.svg" width="35px" class="redoRedonda" alt="PC"></span>
-            <span><img src="img/setup.svg" width="35px" class="redoRedonda" alt="Setup"></span>
-            <span><img src="img/caja.svg" width="35px" class="redoRedonda" alt="Caja"></span>
+            <span><img src="img/time.png"  class="redoRedonda" alt="Reloj"></span>
+            <span><img src="img/laptop.png" class="redoRedonda" alt="PC"></span>
+            <span><img src="img/setting.png" class="redoRedonda" alt="Setup"></span>
+            <span><img src="img/box.png" class="redoRedonda" alt="Caja"></span>
           </div>
         </div>
         <div class="row text-center">
